--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ crispy-bootstrap5==2025.6
 Django==4.2.26
 django-crispy-forms==2.5
 django-jazzmin==3.0.1
+gunicorn==23.0.0
 kombu==5.5.4
 packaging==25.0
 pillow==11.3.0
